@@ -1,3 +1,8 @@
+2006-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* test/string-util.c:
+	* src/glib.h: implement g_ascii_xdigit_value and tests.
+
 2006-10-06  Miguel de Icaza  <miguel@novell.com>
 
 	* src/gstr.c (g_ascii_strdown): Implement.
